# konewka

./: LICENSE  README.md  package.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  dbus.rs  main.rs  structs.rs
src-tauri/src/dbus/: openvpn3.rs  session.rs  structs.rs
src-tauri/src/utils/: mod.rs  utils.rs
src/common/: types.ts
src/components/: Logs.tsx  Modals.tsx
src/store/: store.ts
src/store/features/common/: common.ts
src/store/features/local-configs/: local-configs.ts
src/store/saga/: app-saga.ts
